# task_manager

./: .gitignore  CMakeLists.txt  README.md  amalgamate.py
release/: task_manager.hpp
src/: main.cpp  task_manager.cpp  task_manager.h  task_manager.hpp  util.h
